--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <h1 class="hero-title" class="load-hidden">
                 Hi, my name is  <span class="text-color-main">Chan Siaw Wei</span>
                 <br />
-                I'm the Unknown Developer asdasd .
+                I'm the Unknown Developer .
             </h1>
             <p class="hero-cta" class="load-hidden">
                 <a class="cta-btn cta-btn--hero" href="#about">Know more</a>
