--- a/index.html
+++ b/index.html
@@ -266,38 +266,41 @@
                         <div class="col-md-12 col-sm-12" style="padding-bottom: 5%;">
                             <div  >
                                 <img src="./assets//icons/html-5.png" alt="" width="75" height="75">
-                                <img src="./assets//icons/html-5.png" alt="" width="75" height="75">
-                                <img src="./assets//icons/html-5.png" alt="" width="75" height="75">
-                                <img src="./assets//icons/html-5.png" alt="" width="75" height="75">
-                                <img src="./assets//icons/html-5.png" alt="" width="75" height="75">
-                                <img src="./assets//icons/html-5.png" alt="" width="75" height="75">
-                                <img src="./assets//icons/html-5.png" alt="" width="75" height="75">
-                                <img src="./assets//icons/html-5.png" alt="" width="75" height="75">
-                                <img src="./assets//icons/html-5.png" alt="" width="75" height="75">
-                                <img src="./assets//icons/html-5.png" alt="" width="75" height="75">
-                                <img src="./assets//icons/html-5.png" alt="" width="75" height="75">
-                                <img src="./assets//icons/html-5.png" alt="" width="75" height="75">
+                                <img src="./assets//icons/css.png" alt="" width="75" height="75">
+                                <img src="./assets//icons/javascript.png" alt="" width="75" height="75">
+                                <img src="./assets//icons/typescript.png" alt="" width="75" height="75">
+                                <img src="./assets//icons/angular.svg" alt="" width="75" height="75">
+                                <img src="./assets//icons/git.png" alt="" width="75" height="75">
+                                <img src="./assets//icons/csharp.jpeg" alt="" width="75" height="75">
+                                <img src="./assets//icons/dotnet.png" alt="" width="75" height="75">
+                                <img src="./assets//icons/ionic.jpeg" alt="" width="75" height="75">
+                                <img src="./assets//icons/mongo.png" alt="" width="75" height="75">
+                                <img src="./assets//icons/devops.png" alt="" width="75" height="75">
+                                <img src="./assets//icons/worpress.png" alt="" width="75" height="75">
                             </div>
                     </div>
                         <div class="col-md-12 col-sm-12">
                             <div  id="solar">
+                                <h2  class="section-title">
+                                    Most Used Language 
+                                </h2>
                                 <div class="skills-circle-wrap">
                                     <div class="skills-circle">
                                         <div class="skill-orbit">
                                             <div class="skill-planet"><span>JS</span></div>
                                         </div>
                                         <div class="skill-orbit">
-                                            <div class="skill-planet"><span>CSS</span></div>
+                                            <div class="skill-planet"><span>PHP</span></div>
                                         </div>
                                         <div class="skill-orbit">
                                             <div class="skill-planet"><span>HTML</span></div>
                                         </div>
                                           
                                         <div class="skill-orbit"> 
-                                            <div class="skill-planet"><span>Ai</span></div>
+                                            <div class="skill-planet"><span>C#</span></div>
                                         </div>
                                         <div class="skill-orbit">
-                                            <div class="skill-planet"><span>Ps</span></div>
+                                            <div class="skill-planet"><span>TS</span></div>
                                         </div>
                                      
                                     </div>
