feat: added llm project

--- a/index.html
+++ b/index.html
@@ -228,6 +228,36 @@
                         </div>
                     </div>
                 </div>
+
+                 <!-- Each .row is a project -->
+                 <div class="row">
+                    <div class="col-lg-4 col-sm-12">
+                        <div class="project-wrapper__text">
+                            <h3 class="project-wrapper__text-title">Interview Question Generator (LLM)</h3>
+                            <div>
+                                <p class="mb-4">
+                                    This is a tool designed with <strong>Large Language Model (LLM)</strong> to assist you in generating potential interview questions based 
+                                    on the job URL you provide. 
+                                    This tool leverages various technologies, 
+                                    including <a href="https://beautiful-soup-4.readthedocs.io/en/latest/#" class="text-color-main"> BeautifulSoup </a>, <a class="text-color-main" href="https://pypi.org/project/markdownify/"> Markdownify</a>, 
+                                    <a class="text-color-main" href="https://python.langchain.com/docs/get_started/introduction.html">LangChain</a>,  and <a class="text-color-main" href="https://openai.com/">OpenAI</a>. 
+                                    This is hosted with <a href="https://streamlit.io/" class="text-color-main">Streamlit</a> to provide accurate and relevant question suggestions. 
+                                </p>
+
+                            </div>
+                            <a target="_blank" class="cta-btn cta-btn--hero" href="https://inteview-question-generator.streamlit.app/">
+                                See Live
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-8 col-sm-12">
+                        <div class="project-wrapper__image">
+                            <div data-tilt class="thumbnail rounded">
+                                <img class="img-fluid" src="./assets/llm-generator-wide.png" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <!-- <div class="row">
                     <div class="col-lg-4 col-sm-12">
                         <div class="project-wrapper__text">
